--- a/config.ini
+++ b/config.ini
@@ -10,19 +10,23 @@
 
 # Set this to the location of your HTAs. The default is probably fine unless you're testing or have a local copy.
 
-    art_files_compiled_path = R:\Transfers Heat others\Art Files Compiled
+    art_files_compiled_path = R:\Artwork\Graphics\Art Files Compiled
+
+# Set this to the location of your raised helmet decals. The default is probably fine unless you're testing or have a local copy.
+
+    rdx_files_path = R:\Artwork\Production Art\Raised Helmet Decals
 
 # Set this to the location of your heat transfer screen files. The default is probably fine unless you're testing or have a local copy.
 
-    heat_transfer_files_path = R:\Transfers Heat others\01Production Art\Heat Transfer
+    heat_transfer_files_path = R:\Artwork\Production Art\Heat Transfer
 
 # Set this to the location of your film files. The default is probably fine unless you're testing or have a local copy.
 
-    film_files_path = R:\Transfers Heat others\01Production Art\Film
+    film_files_path = R:\Artwork\Production Art\Film
 
 # Set this to the location of your helmet files. The default is probably fine unless you're testing or have a local copy.
 
-    helmet_files_path = R:\Transfers Heat others\01Production Art\Helmet
+    helmet_files_path = R:\Artwork\Production Art\Helmet
 
 # Set this to the folder where you'd like things stored while they're worked on.
 
@@ -38,7 +42,7 @@
 
 # Set this to the folder where you'd like order folders placed when they're finished.
 
-    finished_folder_path = C:\Users\fredricg\Downloads\Finished Folders
+    finished_folder_path = R:\Orders\WTS Orders
 
 # Set this to the location of your blank art sheet. Make sure to use the Improved Art Sheet or things won't work at all.
 
@@ -46,11 +50,7 @@
 
 # Set this to the path of your blank MLOrder.
 
-    blank_order_path = C:\Users\fredricg\OneDrive - Amer Sports\Documents\Work Stuff\Templates\MLOrder.xlsm
-
-# Set this to the path of your team name/store id database.
-
-    database_path = E:\Projects\Team Shop Automaton\TeamShopDB.db
+    blank_order_path = C:\Users\fredricg\OneDrive - Amer Sports\Documents\Work Stuff\Templates\MLOrder_T.xltm
 
 # Set this to the base path of your player number template folder.
 
@@ -73,9 +73,11 @@
 [Special Teams]
 
 # This is a list of Minor League teams, who get film on items that would normally take heat transfers.
+# Do NOT leave this blank, or all orders will be processed as MiLB.
 
     milb_list = South Bend Cubs,Hudson Valley Renegades
 
 # This is a list of teams who get direct transfers on items that would normally take heat transfers.
+# Do NOT leave this blank, or all orders will be processed as DT.
 
-    direct_transfer_list = Savannah Bananas,Party Animals
+    direct_transfer_list = DummyVille
